# blazingsql

./: .clang-format  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yml  CHANGELOG.md  README.md  build.sh  dependencies.sh  snowflake_odbc_setup.sh
engine/: .clang-format  CMakeLists.txt  README.md  setup.py
engine/bsql_engine/io/: cio.pxd  io.pyx
engine/cmake/: ConfigureCudfCompute.cmake  ConfigureProductVersion.cmake  ConfigureUcx.cmake  InitCudaCompiler.cmake
engine/include/engine/: engine.h  errors.h  initialize.h
engine/include/io/: io.h
engine/src/: CalciteInterpreter.cpp
engine/src/blazing_table/: BlazingArrowTable.cpp  BlazingArrowTable.h  BlazingArrowTableView.cpp  BlazingArrowTableView.h  BlazingColumn.h  BlazingColumnOwner.cpp  BlazingColumnOwner.h  BlazingColumnView.h  BlazingCudfTable.cpp  BlazingCudfTable.h  BlazingCudfTableView.cpp  BlazingCudfTableView.h  BlazingHostTable.cpp  BlazingHostTable.h  BlazingTable.cpp  BlazingTable.h  BlazingTableView.cpp  BlazingTableView.h  arrow-conversion-utils.h
engine/src/bmr/: BlazingMemoryResource.cpp  BlazingMemoryResource.h  BufferProvider.cpp  BufferProvider.h  MemoryMonitor.cpp
engine/src/cache_machine/: AbstractCacheMachine.cpp  AbstractCacheMachine.h  ArrowCacheData.cpp  ArrowCacheData.h  CPUCacheData.cpp  CPUCacheData.h  CacheData.cpp  CacheData.h  CacheDataIO.cpp  CacheDataIO.h  CacheDataLocalFile.cpp  CacheDataLocalFile.h  CacheMachine.cpp  CacheMachine.h  ConcatCacheData.cpp  ConcatCacheData.h  GPUCacheData.cpp  GPUCacheData.h  WaitingQueue.h  cache_machine_api.h
engine/src/cache_machine/arrow/: CacheMachine.cpp
engine/src/cache_machine/common/: ArrowCacheData.cpp  ArrowCacheData.h  CPUCacheData.cpp  CPUCacheData.h  CacheDataIO.cpp  CacheDataIO.h  CacheDataLocalFile.cpp  CacheDataLocalFile.h  ConcatCacheData.cpp  ConcatCacheData.h  WaitingQueue.h
engine/src/cache_machine/cudf/: CacheMachine.cpp  GPUCacheData.cpp  GPUCacheData.h
engine/src/communication/: CommunicationData.h
engine/src/communication/CommunicationInterface/: messageListener.cpp  messageListener.hpp  messageReceiver.cpp  messageReceiver.hpp  messageSender.cpp  messageSender.hpp  node.cpp  node.hpp  protocols.cpp  protocols.hpp  serializer.cpp  serializer.hpp
engine/src/communication/messages/: GPUComponentMessage.cpp  GPUComponentMessage.h
engine/src/compute/: api.h  api_arrow.cpp  api_cudf.cpp  backend_dispatcher.h  backend_register.h
engine/src/compute/arrow/: api_arrow.cpp
engine/src/compute/cudf/: api_cudf.cpp
engine/src/cython/: engine.cpp  errors.cpp  initialize.cpp  io.cpp  static.cpp
engine/src/distribution_utils/: primitives.cpp  primitives.h
engine/src/execution_graph/: Context.cpp  Context.h  PhysicalPlanGenerator.h  backend.hpp  backend_dispatcher.h  executor.cpp  executor.h  graph.cpp  graph.h  manager.cpp  manager.h
engine/src/execution_graph/logic_controllers/: BatchAggregationProcessing.cpp  BatchProcessing.cpp  BatchProcessing.h  BlazingHostTable.cpp  BlazingHostTable.h  CPUCacheData.h  CacheDataIO.h  CacheDataLocalFile.h  CacheMachine.cpp  CacheMachine.h  ConcatCacheData.h  GPUCacheData.h  LogicPrimitives.cpp  LogicPrimitives.h  PhysicalPlanGenerator.h
engine/src/execution_kernels/: BatchAggregationProcessing.cpp  BatchAggregationProcessing.h  BatchFilterProcessing.cpp  BatchFilterProcessing.h  BatchJoinProcessing.cpp  BatchJoinProcessing.h  BatchOrderByProcessing.cpp  BatchOrderByProcessing.h  BatchProcessing.cpp  BatchProcessing.h  BatchProjectionProcessing.cpp  BatchProjectionProcessing.h  BatchScanProcessing.cpp  BatchScanProcessing.h  BatchUnionProcessing.cpp  BatchUnionProcessing.h  BatchWindowFunctionProcessing.cpp  BatchWindowFunctionProcessing.h  LogicPrimitives.cpp  LogicPrimitives.h  LogicalFilter.cpp  LogicalFilter.h  LogicalProject.cpp  LogicalProject.h  distributing_kernel.cpp  distributing_kernel.h  kernel.cpp  kernel.h
engine/src/io/: DataLoader.cpp  DataLoader.h  DataType.h  Schema.cpp  Schema.h
engine/src/io/data_parser/: ArgsUtil.cpp  ArgsUtil.h  ArrowParser.cpp  ArrowParser.h  CSVParser.cpp  CSVParser.h  DataParser.h  GDFParser.cpp  GDFParser.h  JSONParser.cpp  JSONParser.h  OrcParser.cpp  OrcParser.h  (+2 more)
engine/src/operators/: Concatenate.cpp  Concatenate.h  Distribution.cpp  Distribution.h  GroupBy.cpp  GroupBy.h  LogicalFilter.cpp  LogicalFilter.h  LogicalProject.cpp  LogicalProject.h  OrderBy.cpp  OrderBy.h  Types.cpp  Types.h  operators_definitions.h
engine/src/parser/: CalciteExpressionParsing.cpp  CalciteExpressionParsing.h  expression_tree.cpp  expression_tree.hpp  expression_utils.cpp  expression_utils.hpp  filter_parser_utils.cpp  filter_parser_utils.h  groupby_parser_utils.cpp  groupby_parser_utils.h  orderby_parser_utils.cpp  orderby_parser_utils.h  project_parser_utils.cpp  project_parser_utils.h  types_parser_utils.cpp  types_parser_utils.h
engine/src/skip_data/: SkipDataProcessor.cpp  SkipDataProcessor.h
engine/src/utilities/: CommonOperations.cpp  CommonOperations.h  CudfArrowUtils.cpp  CudfArrowUtils.h  DebuggingUtils.cpp  DebuggingUtils.h  error.hpp
engine/tests/: CMakeLists.txt  cython_errors_dummy.cpp
engine/tests/cache_machine/: CMakeLists.txt  cache_test.cpp  cachedata_test.cpp  exception_handling_test.cpp
engine/tests/communication/: message_send_receive.cpp  send_and_receive_test.cpp  send_and_receive_test_ucx.cpp
engine/tests/dispatcher/: CMakeLists.txt  dispatcher_test.cpp
engine/tests/host-table/: CMakeLists.txt  from-arrow.cpp  to-arrow.cpp
engine/tests/kernel_tests/: CMakeLists.txt  compute_test.cpp  kernel_projection_test.cpp  window_overlap_kernel_test.cpp
engine/tests/logical-groupby/: aggregation-test.cpp
engine/tests/new-tests/: apply_filter.cpp  filter_tests.cpp  interops_tests.cpp  process_project.cpp
engine/tests/provider/: CMakeLists.txt  postgresql_provider_test.cpp  snowflake_provider_test.cpp  sql_provider_test.cpp  sql_provider_test_utils.h  sqlite_provider_test.cpp
engine/tests/sort/: sort.cpp
engine/tests/utilities/: BlazingUnitTest.h
engine/tests/waiting_queue/: waiting_queue-tests.cpp
(+129 files in other folders)
